(lang dune 2.0)
(name binary)
(implicit_transitive_deps false)

(generate_opam_files true)
(source (github JoeBloggs/binary))
(maintainers "Joe Bloggs <joe@example.com>")
(authors "Joe Bloggs <joe@example.com>")

(package
 (name binary)
 (synopsis "Binary that depends on a tested library")
 (description "\
Binary that depends on a tested library
")
 (documentation https://JoeBloggs.github.io/binary/)
 (depends alcotest fmt logs))
